--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     grid-column-end: 4;
     display: flex;
     justify-content: space-around;
+    margin-top: 20px;
 }
 
 /* Requisitos e Regras */
