:bug: Remove bug da persitência de dados após exclusão
Remove bug da persistência de dados após a remoção visual das dependências ou conflitos.
As dependências e os conflitos eram removidos visualmente, mas ainda continuavam na estrutura de dados dentro do elemento.

--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ body {
 input:checked + div.viewDC{
     display: block;
 }
-input {
-    display: block;
+input[id=viewDC] {
+    display:none;
 }
 
 .divSpanDepenID,
