--- a/style.css
+++ b/style.css
@@ -126,12 +126,65 @@ body {
     padding: 0px 10px 10px 15px;
     margin-bottom: 10px;
 }
-input:checked + div.viewDC{
+input[id=viewDC]:checked + div.viewDC{
     display: block;
 }
 input[id=viewDC] {
     display:none;
 }
+
+/* Export das informações */
+.infoExport{
+    background: rgb(0, 255, 255, .5);
+    /* padding: 2em; */
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+}
+.infoExport > pre{
+    display: block;
+    background-color: #1c1c1f;
+    color: white;
+    border-color: black;
+    border-width: .25em;
+    border-style: inset;
+    border-radius: .75em;
+    width: 75vw;
+    text-align: center;
+    padding: 1em;
+}
+
+.infoExport > button[id="copiar"]{
+    display: block;
+    width: 10vw;
+}
+.infoExport > button[id="fechar"]{
+    position: absolute;
+    font-size: 1.6em;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 4px solid;
+    background-color: rgb(119, 0, 204);
+    color: white;
+    border-color: rgb(0, 255, 255, 1);
+    font-family: monospace;
+    cursor: pointer;
+    box-shadow: 1px 4px 5px rgb(0 0 0 / 50%);
+}
+
+input[id=infoExport]:checked + div.infoExport{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* input[id=infoExport] {
+    display:none;
+} */
 
 .divSpanDepenID,
 .divSpanConfliID{
