--- a/style.css
+++ b/style.css
@@ -150,9 +150,10 @@ input[id=viewDC] {
     border-width: .25em;
     border-style: inset;
     border-radius: .75em;
-    width: 75vw;
-    text-align: center;
+    max-width: 75vw;
+    height: 75vh;
     padding: 1em;
+    overflow: auto;
 }
 
 .infoExport > button[id="copiar"]{
@@ -182,9 +183,9 @@ input[id=infoExport]:checked + div.infoExport{
     justify-content: center;
     align-items: center;
 }
-/* input[id=infoExport] {
+input[id=infoExport] {
     display:none;
-} */
+}
 
 .divSpanDepenID,
 .divSpanConfliID{
