--- a/style.css
+++ b/style.css
@@ -154,11 +154,42 @@ input[id=viewDC] {
     height: 75vh;
     padding: 1em;
     overflow: auto;
+    box-shadow: 4px 6px 11px rgb(0 0 0 / 80%);
 }
 
+.infoExport > pre::-webkit-scrollbar{
+    border: solid 3px transparent;
+}
+
+.infoExport > pre::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 10px 10px white;
+    border: solid 3px transparent;
+    border-radius: 50px;
+    margin-right: 10px;
+}
+
+.infoExport > pre::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px 10px gray;
+    border: solid 5px transparent;
+    border-radius: 50px;
+    margin-right: 10px;
+}
+
+
 .infoExport > button[id="copiar"]{
+    font-size: .9em;
     display: block;
-    width: 10vw;
+    width: 15vw;
+    border-width: 3px;
+    border-color: darkcyan;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 60%);
+    border-radius: 5px;
+}
+.infoExport > button#copiar.clicado{
+    background-color: #1c1c1f;
+    border-color: black;
+    border-width: 3px;
+    color: white;
 }
 .infoExport > button[id="fechar"]{
     position: absolute;
